deploy/dev-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: token-dashboard-ui-dev-service
 namespace: token-dashboard-ui-dev
 labels:
   app: token-dashboard-ui-dev
spec:
 type: NodePort
 selector:
   app: token-dashboard-ui-dev
 ports:
 - protocol: TCP
   port: 80
   targetPort: 80
   name: http
